fixed cursor and text-align bug

--- a/scss/partials/_shapes.scss
+++ b/scss/partials/_shapes.scss
@@ -19,6 +19,9 @@
     border: none;
     a > & {
         line-height: $h;
+        text-align: center;
+    }
+    & {
         cursor: pointer;
     }
 }
